--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+
+    <link rel="preconnect" href="https://use.typekit.net" crossorigin />
+    <link rel="preload" href="https://use.typekit.net/kuq1xhl.css" as="style" />
+    <link rel="stylesheet" href="https://use.typekit.net/kuq1xhl.css" />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css?family=Barlow"
+      as="style"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Barlow"
+    />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
