Add icon button styles

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Barlow"
     />
+
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
