Remove global stylesheet imports in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -6,25 +6,28 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
 
-    <link rel="preconnect" href="https://use.typekit.net" crossorigin />
-    <link rel="preload" href="https://use.typekit.net/kuq1xhl.css" as="style" />
-    <link rel="stylesheet" href="https://use.typekit.net/kuq1xhl.css" />
+    <!-- Removing these for now since they're being imported in main.scss -->
+    <!-- 
+      <link rel="preconnect" href="https://use.typekit.net" crossorigin />
+      <link rel="preload" href="https://use.typekit.net/kuq1xhl.css" as="style" />
+      <link rel="stylesheet" href="https://use.typekit.net/kuq1xhl.css" />
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="preload"
-      href="https://fonts.googleapis.com/css?family=Barlow"
-      as="style"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Barlow"
-    />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+        rel="preload"
+        href="https://fonts.googleapis.com/css?family=Barlow"
+        as="style"
+      />
+      <link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Barlow"
+      />
 
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
+      <link
+        href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        rel="stylesheet"
+      />
+    -->
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
