More theming, add design add on for design previews

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -84,6 +84,14 @@
     width: 100%;
   }
 
+  .sidebar-header button {
+    color: white !important;
+  }
+
+  .sidebar-header button:focus {
+    background: rgba(0, 0, 0, 0.1) !important;
+  }
+
   #storybook-explorer-searchfield {
     border: 1px solid white !important;
     color: white !important;
